更新一些东西

--- a/config/samples/demo_v1_rollingupdatecrd.yaml
+++ b/config/samples/demo_v1_rollingupdatecrd.yaml
@@ -1,7 +1,8 @@
 apiVersion: demo.roll.io/v1
 kind: RollingUpdateCrd
 metadata:
-  name: nju17
+  name: rolling-update-crd
+  namespace: nju17
 spec:
   deploymentName: cloud-native
   # TODO(user): Add fields here
